--- a/style.css
+++ b/style.css
@@ -65,3 +65,19 @@ footer {
   height: 50px;
   background-color: #aaaaaa;
 }
+
+@media screen and (max-width: 768px) {
+  header {
+    width: 100%;
+  }
+  main {
+    width: 100%;
+    display: block;
+  }
+
+  .boxlist {
+    width: 90%;
+    margin-right: 5%;
+    margin-left: 5%;
+  }
+}
