--- a/style.css
+++ b/style.css
@@ -80,4 +80,11 @@ footer {
     margin-right: 5%;
     margin-left: 5%;
   }
+  .boxlist:nth-child(1) {
+    margin-bottom: 20px;
+  }
+
+  .boxlist:nth-child(2) {
+    margin-bottom: 20px;
+  }
 }
